fixed icon alignment

--- a/src/components/top-header/index.css
+++ b/src/components/top-header/index.css
@@ -107,3 +107,9 @@
     padding: 30px 0px;
   }
 }
+
+@media screen and (min-width: 1900px) {
+  .top-header__account button svg {
+    margin-bottom: 1px;
+  }
+}
